src/test/ui/traits/cycle-cache-err-60010.stderr
error[E0275]: overflow evaluating the requirement `SalsaStorage: std::panic::RefUnwindSafe`
  --> $DIR/cycle-cache-err-60010.rs:69:5
   |
LL |     fn parse(&self) {
   |     --------------- required by `SourceDatabase::parse`
...
LL |     SourceDatabase::parse(db);
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: required because it appears within the type `*const SalsaStorage`
   = note: required because it appears within the type `std::ptr::Unique<SalsaStorage>`
   = note: required because it appears within the type `std::boxed::Box<SalsaStorage>`
   = note: required because it appears within the type `Runtime<RootDatabase>`
   = note: required because it appears within the type `RootDatabase`
   = note: required because of the requirements on the impl of `SourceDatabase` for `RootDatabase`

error[E0275]: overflow evaluating the requirement `Runtime<RootDatabase>: RefUnwindSafe`
  --> $DIR/cycle-cache-err-60010.rs:31:20
   |
LL | trait Database {
   |       -------- required by a bound in this
LL |     type Storage;
   |     ------------- required by this bound in `Database`
...
LL |     type Storage = SalsaStorage;
   |                    ^^^^^^^^^^^^
   |
   = note: required because it appears within the type `RootDatabase`
   = note: required because of the requirements on the impl of `SourceDatabase` for `RootDatabase`
   = note: required because of the requirements on the impl of `Query<RootDatabase>` for `ParseQuery`
   = note: required because it appears within the type `SalsaStorage`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0275`.
